--- a/app/views/organisations/projects.html.erb
+++ b/app/views/organisations/projects.html.erb
@@ -15,14 +15,14 @@
         <div class="form-group" style="padding-bottom: 25px;">
 
           <select name="team"  id="team" class="form-control" >
-            <option value="all">All</option>
+            <option value="ALL">All</option>
             <% @organisation.teams.each do |team| %>
               <option value="<%= team.ids %>" <%= "selected" if params[:team].to_s.eql?(team.ids) %> >Team: <%= team.name %></option>
             <% end %>
           </select>
 
           <select name="language"  id="language" class="form-control" >
-            <option value="all">All</option>
+            <option value="ALL">All</option>
             <% @organisation.unique_languages.each do |language| %>
               <option value="<%= language %>" <%= "selected" if params[:language].to_s.eql?(language.to_s) %> >Language: <%= language %></option>
             <% end %>
