--- a/app/views/user/projects/helpers/_project.html.erb
+++ b/app/views/user/projects/helpers/_project.html.erb
@@ -14,6 +14,9 @@
   </td>
   <td>
     <%= link_to project.name, user_project_path(project, :child => 'summary'), :class => 'searchResultLink' %>
+    <% if !project.version.to_s.empty? %>
+      : <%= project.version %>
+    <% end %>
     <% if project.public == false %>
       <span class="fa fa-lock" title="Private VersionEye Project"></span>
     <% end %>
