--- a/app/views/organisations/projects.html.erb
+++ b/app/views/organisations/projects.html.erb
@@ -15,16 +15,23 @@
         <div class="form-group" style="padding-bottom: 25px;">
 
           <select name="team"  id="team" class="form-control" >
-            <option value="ALL">All</option>
+            <option value="ALL">All teams</option>
             <% @organisation.teams.each do |team| %>
               <option value="<%= team.ids %>" <%= "selected" if params[:team].to_s.eql?(team.ids) %> >Team: <%= team.name %></option>
             <% end %>
           </select>
 
           <select name="language"  id="language" class="form-control" >
-            <option value="ALL">All</option>
+            <option value="ALL">All languages</option>
             <% @organisation.unique_languages.each do |language| %>
               <option value="<%= language %>" <%= "selected" if params[:language].to_s.eql?(language.to_s) %> >Language: <%= language %></option>
+            <% end %>
+          </select>
+
+          <select name="version"  id="version" class="form-control" >
+            <option value="ALL">All versions</option>
+            <% @organisation.unique_versions.each do |version| %>
+              <option value="<%= version %>" <%= "selected" if params[:version].to_s.eql?(version.to_s) %> >Version: <%= version %></option>
             <% end %>
           </select>
 
