--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -19,7 +19,11 @@
     <div class="content_header_def">
       <div id="project-title">
         <span class = "namelabel" >
-          <b>Name:</b> <%= @project.name %> (<%= @project.ids %>)
+          <b>Name:</b> <%= @project.name %>
+          <% if !@project.version.to_s.empty? %>
+            : <%= @project.version %>
+          <% end %>
+          (<%= @project.ids %>)
         </span>
         <% if @project.public == false %>
           <span class="fa fa-lock" title="Private VersionEye Project"></span>
@@ -59,9 +63,13 @@
 
       <% end %>
 
-      <% if @project.group_id && @project.artifact_id %>
+      <% if @project.group_id && @project.artifact_id && @project.version.to_s.empty? %>
         <div style="padding-top: 10px;">
           <span title="GroupdId / ArtifactId"><b>GA:</b></span> <%= @project.group_id %> / <%= @project.artifact_id %>
+        </div>
+      <% elsif @project.group_id && @project.artifact_id && !@project.version.to_s.empty? %>
+        <div style="padding-top: 10px;">
+          <span title="GroupdId / ArtifactId : Version"><b>GAV:</b></span> <%= @project.group_id %> / <%= @project.artifact_id %> : <%= @project.version %>
         </div>
       <% end %>
 
