--- a/app/views/sec_pdf/footer.html
+++ b/app/views/sec_pdf/footer.html
@@ -25,7 +25,7 @@
   <body>
       <hr>
       <div style="text-align: center" >
-        Powered by VersionEye
+        This security report was created by <a href="https://www.versioneye.com">VersionEye</a> - automated version and securtiy analysis for open source software and custom developments
       </div>
   </body>
 </html>
