--- a/app/views/sec_pdf/sec_pdf.html.erb
+++ b/app/views/sec_pdf/sec_pdf.html.erb
@@ -68,6 +68,8 @@
   <body>
     <div class="container">
 
+      <h1>Security Report for <%= project.name %></h1>
+
       <p>
         <b>Date:</b> <%= DateTime.now.strftime("%d.%m.%Y") %> <br/>
       </p>
@@ -89,14 +91,18 @@
           <tbody>
             <% [:vulnerable, :ok].each do |key| %>
               <% project.sec_pdf_list[key].each do |dep| %>
+                <% cell_style = "" %>
+                <% if key.to_s.eql?("vulnerable") %>
+                  <% cell_style = "font-weight: bold; color: red;" %>
+                <% end %>
                 <tr>
-                  <td class="left">
+                  <td class="left" style="<%= cell_style %>">
                     (<%= dep[:language] %>) <%= dep[:component] %>
                     <% if dep[:group_id] %>
                       <br/> <span class='small'>GroupId: <%= dep[:group_id] %></span>
                     <% end %>
                   </td>
-                  <td class="left">
+                  <td class="left" style="<%= cell_style %>">
                     <% if dep[:version].to_s.strip.match(/\A\:path/) %>
                       :path
                     <% elsif dep[:version].to_s.strip.match(/\A\:git/) %>
@@ -105,7 +111,7 @@
                       <%= dep[:version].to_s.strip %>
                     <% end %>
                   </td>
-                  <td class="left"> <%= key.to_s %> </td>
+                  <td class="left" style="<%= cell_style %>"> <%= key.to_s %> </td>
                 </tr>
               <% end %>
             <% end %>
