--- a/app/views/user/projects/helpers/_project_dependency_row.html.erb
+++ b/app/views/user/projects/helpers/_project_dependency_row.html.erb
@@ -21,6 +21,8 @@
         <span title="<%= dep.version_requested %>">:path</span>
       <% elsif dep.version_requested.to_s.match(/\A\:git/) %>
         <span title="<%= dep.version_requested %>">:git</span>
+      <% elsif dep.version_requested.to_s.match(/\Agit\+ssh/) %>
+        <span title="<%= dep.version_requested %>">:git+ssh</span>
       <% elsif dep.version_requested.to_s.match(/\A\:http/) || dep.version_requested.to_s.match(/\Ahttp/) %>
         <a href="<%= dep.version_requested %>"><span title="<%= dep.version_requested %>">:http</span></a>
       <% else %>
