Display the timezone of the server.

--- a/app/views/user/projects/helpers/_project_source.html.erb
+++ b/app/views/user/projects/helpers/_project_source.html.erb
@@ -30,4 +30,4 @@
     <% else %>
       This is a project from file upload.
     <% end %>
-    Last checked at <span>"<%= project.updated_at.strftime("%b %d, %Y - %H:%M") %>"</span>.
+    Last checked at <span>"<%= project.updated_at.strftime("%b %d, %Y - %H:%M") %>" (UTC)</span>.
