Refactor the badges

--- a/app/views/shared/_dependency_badge.html.erb
+++ b/app/views/shared/_dependency_badge.html.erb
@@ -14,7 +14,7 @@
 
   <script type="text/javascript">
     element = document.getElementById("dependency_badge");
-    element.src = document.URL.split("?")[0].split("#")[0] + "/badge.svg?style=flat"
+    element.src = document.URL.split("?")[0].split("#")[0] + "/badge.svg?style=flat-square"
   </script>
 
 <% end %>
