--- a/app/views/shared/_ref_badge.html.erb
+++ b/app/views/shared/_ref_badge.html.erb
@@ -5,5 +5,5 @@
   </a>
   <script type="text/javascript">
     element = document.getElementById("reference_badge");
-    element.src = "/<%= @product.language_esc %>/<%= @product.to_param %>/reference_badge.svg?style=flat"
+    element.src = "/<%= @product.language_esc %>/<%= @product.to_param %>/reference_badge.svg?style=flat-square"
   </script>
