Improve documentation for connecting VE to GH, Stash, Bitbucket.

--- a/app/views/settings/globalsettings/index_bitbucket.html.erb
+++ b/app/views/settings/globalsettings/index_bitbucket.html.erb
@@ -15,6 +15,11 @@
 
       <p class="description">
         If you are using <a href="https://bitbucket.org/">Bitbucket</a> you can configure it here.
+        Please use
+        <pre class="prettyprint">http://VERSIONEYE_DOMAIN/auth/bitbucket/callback</pre><br/>
+        as callback URL in Bitbucket and
+        replace "VERSIONEYE_DOMAIN" with the IP address or domain under which your VersionEye Enterprise instance
+        is reachable.<br/><br/>
       </p>
 
       <div class="form-group">
