--- a/app/views/settings/globalsettings/index_github.html.erb
+++ b/app/views/settings/globalsettings/index_github.html.erb
@@ -15,6 +15,11 @@
 
       <p class="description">
         If you are using <a href="https://enterprise.github.com/">GitHub Enterprise</a> you can configure it here.
+        Please use
+        <pre class="prettyprint">http://VERSIONEYE_DOMAIN/auth/github/callback</pre><br/>
+        as callback URL in GitHub Enterprise and
+        replace "VERSIONEYE_DOMAIN" with the IP address or domain under which your VersionEye Enterprise instance
+        is reachable.<br/><br/>
       </p>
 
       <div class="form-group">
