--- a/app/views/settings/globalsettings/index_stash.html.erb
+++ b/app/views/settings/globalsettings/index_stash.html.erb
@@ -15,6 +15,11 @@
 
       <p class="description">
         If you are using <a href="https://www.atlassian.com/software/stash">Atlassian Stash</a> you can configure it here.
+        Please use
+        <pre class="prettyprint">http://VERSIONEYE_DOMAIN/auth/stash/callback</pre><br/>
+        as callback URL in Stash and
+        replace "VERSIONEYE_DOMAIN" with the IP address or domain under which your VersionEye Enterprise instance
+        is reachable.<br/><br/>
       </p>
 
       <div class="form-group">
