--- a/app/views/organisations/_navi.html.erb
+++ b/app/views/organisations/_navi.html.erb
@@ -19,7 +19,7 @@
           <li><%= link_to 'License Whitelists', organisation_license_whitelists_path(@organisation) %></li>
           <li><%= link_to 'Component Whitelists', organisation_component_whitelists_path(@organisation) %></li>
           <li><%= link_to 'Projects', projects_organisation_path(@organisation) %></li>
-          <% if OrganisationService.allowed_to_transfer_projects?( organisation, current_user ) %>
+          <% if OrganisationService.allowed_to_transfer_projects?( @organisation, current_user ) %>
             <% if github_enabled? %>
               <li><%= link_to ' -- Create From GitHub', user_projects_github_repositories_path, :rel => "nofollow" %></li>
             <% end %>
@@ -29,6 +29,8 @@
             <% if stash_enabled? %>
               <li><%= link_to ' -- Create From Stash', user_projects_stash_repositories_path, :rel => "nofollow" %></li>
             <% end %>
+            <li><%= link_to ' -- Create From URL', new_user_project_path, :rel => "nofollow" %></li>
+            <li><%= link_to ' -- Create From Upload', user_prjects_upload_path, :rel => "nofollow" %></li>
           <% end %>
           <li><%= link_to 'Inventory', components_organisation_path(@organisation) %></li>
         </ul>
