--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -18,7 +18,7 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 1</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 5</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 50</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_free', :alignment => ''  } %></li>
     </ul>
   </div>
@@ -32,7 +32,7 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 5</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 5</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 100</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_micro', :alignment => ''  } %></li>
     </ul>
   </div>
@@ -43,9 +43,9 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 20</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 40</li>
-      <li class="pricing_feature">PDF Export</li>
-      <li class="pricing_feature">CSV Export</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 300</li>
+      <li class="pricing_feature">PDF Reports</li>
+      <li class="pricing_feature">CSV Reports</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_medium', :alignment => '' } %></li>
     </ul>
   </div>
@@ -56,9 +56,9 @@
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
       <li class="pricing_feature">Private Projects: 100</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Project Updates per day via API: </span> 200</li>
-      <li class="pricing_feature">PDF Export</li>
-      <li class="pricing_feature">CSV Export</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 1000</li>
+      <li class="pricing_feature">PDF Reports</li>
+      <li class="pricing_feature">CSV Reports</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_xlarge', :alignment => '' } %></li>
     </ul>
   </div>
