--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -20,12 +20,15 @@
 
     <%= render "pricing" %>
 
+    <p>
+      Send a message to <a href="mailto:support@versioneye.com">support@versioneye.com</a> if you need higher plans.
+    </p>
     <% if has_current_plan?( current_user ) %>
       <p>
-        <br/>
         <a href="/settings/creditcard">Update Credit Card</a>
       </p>
     <% end %>
+
   </div>
 
 </div>
