By default don't display sync box.

--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -100,7 +100,7 @@
         <div id="project_status" class="flash warn" style="padding-bottom: 5px; margin-bottom: 10px; display: none;" >
           <%= image_tag "progress.gif" %> Project is processed by a background job. This page will reload if the job is done.
         </div>
-        <div id="dependencies_status" class="flash warn" style="padding-bottom: 5px; margin-bottom: 10px; display: block;" >
+        <div id="dependencies_status" class="flash warn" style="padding-bottom: 5px; margin-bottom: 10px; display: none;" >
           <div class="row">
             <div class="col-md-1">
               <%= image_tag "progress.gif" %>
